Fix contact section shifting to top of page

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -79,7 +79,6 @@ html{
   }
 
   .body-wrapper{
-    height: 100%;
     min-height: 450px;
   }
 
@@ -207,9 +206,8 @@ html{
     background-repeat: no-repeat;
 
     @media only screen and (max-device-width: 768px) {
-      // background-size: cover;
+      background-size: cover;
       background-position: center;
-      background-size: 100% 176vw;
       width: 100%;
       height: 176vw;
 
@@ -264,7 +262,6 @@ html{
 
       min-height: $navigation-height;
       width: 90%;
-      z-index: 999;
       margin-left: auto;
       margin-right: auto;
       position: fixed;
@@ -363,8 +360,11 @@ html{
         display: none;
       }
 
-      .items{
+      .dropdown{
         display: none;
+        .items{
+          display: none;
+        }
       }
 
       @media only screen and (max-device-width: 768px){
@@ -380,7 +380,7 @@ html{
               border: 1px solid #000;
               border-radius: 3px;
               width: 98.2vw;
-              background: rgba(201,201,201,.6);
+              background: rgba(201,201,201,.3);
             }
             a{
               color: lighten(#000, 32%);
@@ -389,7 +389,6 @@ html{
               top: 3px;
             }
             li{
-              padding: .8em 0;
               font-size: 1.6em;
               text-align: center;
               border-top: 1px solid #000;
@@ -679,16 +678,20 @@ html{
       }
       .slick-slide{
         margin: 0 1vw;
+        height: 8vw;
       }
       .hashrocket{
         position: relative;
         top: 18px;
         left: 5px;
         img{
-          width: 65%;
+          width: 6vw;
         }
       }
       .digi-pro{
+        img{
+          width: 9vw;
+        }
       }
       .revitalists{
         position: relative;
